--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "[99 dog head] crushed to death, thunder that collapse Zijin hammer, purple electricity that nine days Xuan electric gun change. It's sharp, but it's heady. Shine, baby.",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "vitest --dir test -u",
+    "coverage": "vitest run --coverage",
+    "dev": "tsc --watch",
+    "build": "tsc",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "version": "changeset version",
+    "publish": "changeset publish",
+    "relase": "bumpp --commit --tag --push && git push origin --tags -f && changeset publish"
   },
   "repository": {
     "type": "git",
@@ -20,9 +28,16 @@
   },
   "homepage": "https://github.com/aiyoudiao/yasla#readme",
   "devDependencies": {
-    "@changesets/cli": "^2.24.4"
+    "@antfu/eslint-config": "^0.26.3",
+    "@changesets/cli": "^2.24.4",
+    "bumpp": "^8.2.1",
+    "eslint": "^8.23.1",
+    "eslint-plugin-n": "^15.2.5"
   },
   "dependencies": {
+    "@types/figlet": "^1.5.5",
+    "@types/listr": "^0.14.4",
+    "@types/node": "^18.7.18",
     "boxen": "^7.0.0",
     "chalk": "^5.0.1",
     "chokidar": "^3.5.3",
@@ -34,6 +49,8 @@
     "listr": "^0.14.3",
     "package-json": "^8.1.0",
     "semver": "^7.3.7",
-    "unconfig": "^0.3.6"
+    "typescript": "^4.8.3",
+    "unconfig": "^0.3.6",
+    "vitest": "^0.23.2"
   }
 }
