--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@changesets/cli": "^2.24.4",
     "bumpp": "^8.2.1",
     "eslint": "^8.23.1",
-    "eslint-plugin-n": "^15.2.5"
+    "eslint-plugin-n": "^15.2.5",
+    "husky": "^8.0.1"
   },
   "dependencies": {
     "@types/figlet": "^1.5.5",
