--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yasla",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "[99 dog head] crushed to death, thunder that collapse Zijin hammer, purple electricity that nine days Xuan electric gun change. It's sharp, but it's heady. Shine, baby.",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -16,7 +16,7 @@
     "lint:fix": "eslint src/** --fix",
     "version": "changeset version",
     "publish": "changeset publish",
-    "relase": "bumpp --commit --tag --push && git push origin --tags -f && changeset publish"
+    "relase": "changeset version && bumpp --commit --tag --push && git push origin --tags -f && changeset publish"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.26.3",
     "@changesets/cli": "^2.24.4",
+    "@types/fs-extra": "^9.0.13",
     "bumpp": "^8.2.1",
     "eslint": "^8.23.1",
     "eslint-plugin-n": "^15.2.5",
@@ -44,7 +45,7 @@
     "@types/listr": "^0.14.4",
     "@types/node": "^18.7.18",
     "boxen": "^7.0.0",
-    "chalk": "^5.0.1",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "commander": "^9.4.0",
     "fast-glob": "^3.2.12",
@@ -52,7 +53,8 @@
     "file-type": "^18.0.0",
     "fs-extra": "^10.1.0",
     "listr": "^0.14.3",
-    "package-json": "^8.1.0",
+    "package-json": "^7.0.0",
+    "pkg-types": "^0.3.5",
     "semver": "^7.3.7",
     "typescript": "^4.8.3",
     "unconfig": "^0.3.6",
