--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.26.3",
     "@changesets/cli": "^2.24.4",
+    "@types/boxen": "^3.0.1",
+    "@types/commander": "^2.12.2",
     "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^7.3.3",
     "bumpp": "^8.2.1",
     "eslint": "^8.23.1",
     "eslint-plugin-n": "^15.2.5",
@@ -44,7 +47,7 @@
     "@types/figlet": "^1.5.5",
     "@types/listr": "^0.14.4",
     "@types/node": "^18.7.18",
-    "boxen": "^7.0.0",
+    "boxen": "^6.2.1",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "commander": "^9.4.0",
@@ -52,6 +55,7 @@
     "figlet": "^1.5.2",
     "file-type": "^18.0.0",
     "fs-extra": "^10.1.0",
+    "inquirer": "^7.3.3",
     "listr": "^0.14.3",
     "package-json": "^7.0.0",
     "pkg-types": "^0.3.5",
